# dices

./: Cargo.toml  Dockerfile  debug_run.sh  docker-compose.yml
auth_server/: Cargo.toml  Dockerfile
client/: Cargo.toml
client_cli/: Cargo.toml
client_cli/src/: main.rs
client_lib/: Cargo.toml
client_lib/src/: game_manager.rs  lib.rs  server_connector.rs
common/: Cargo.toml
common/src/: lib.rs
game_server/: Cargo.toml
game_server/src/: main.rs  ws.rs
server/: Cargo.toml
