[package]
name = "game_server"
version = "0.1.0"
authors = ["Jan Wojcicki <janwojcicki45@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "*", default-features = false, features = ["full"] }
async-tungstenite = { version = "*", default-features = false, features = ["tokio-runtime"] }
mongodb = "*"
futures = "0.3.5"
lazy_static = "1.4.0"
